# awesome-panel-cli

./: .gitignore  DEVELOPER_GUIDE.md  MANIFEST.in  README.md  docs.md  pyproject.toml
.binder/: postBuild  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yaml
src/awesome_panel_cli/: __init__.py  config.py  hello.py  shared.py
src/awesome_panel_cli/cli/: autoformat.py  build.py  create.py  hello.py  main.py  release.py  test.py
src/awesome_panel_cli/examples/: streaming_indicators.py
src/awesome_panel_cli/introduction/: introduction.ipynb
src/awesome_panel_cli/templates/.binder/: postBuild  requirements.txt
src/awesome_panel_cli/templates/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/awesome_panel_cli/templates/apps/: altair_starter.py  cross_filtering.py  hello_world.py
src/awesome_panel_cli/templates/notebooks/: introduction.ipynb
src/awesome_panel_cli/templates/project/: cookiecutter.json
src/awesome_panel_cli/templates/project/{{cookiecutter.project_slug}}/: .gitignore  DEVELOPER_GUIDE.md  MANIFEST.in  README.md  pyproject.toml
src/awesome_panel_cli/templates/project/{{cookiecutter.project_slug}}/apps/: app.py
src/awesome_panel_cli/templates/project/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_slug}}/: __init__.py
src/awesome_panel_cli/templates/project/{{cookiecutter.project_slug}}/tests/: test_hello.py
src/awesome_panel_cli/templates/views/: view.py  view_html.py
src/awesome_panel_cli/templates/widgets/: viewer.py  viewer_example.py
tests/: conftest.py  test_autoformat.py  test_build.py  test_create.py  test_hello.py  test_main.py  test_release.py  test_shared.py  test_test.py
