[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-panel-cli"
description = "A CLI tool to speed up your workflow when developing Panel applications"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["python", "holoviz", "panel", "cli", "dataviz", "dataapp", "dashboard", "datascience", "analytics"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "autoflake",
    "bandit",
    "black[jupyter]",
    "build",
    "cookiecutter",
    "mypy",
    "pylint",
    "pylint2junit",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "toml",
    "twine",
    "typer[all]",
    "types-invoke",
    "types-requests",
    "types-setuptools",
    "wheel",
]
dynamic = ["version"]

authors = [
    {name = "awesome-panel", email = "marc.skov.madsen@gmail.com"}
]

[project.optional-dependencies]
dev = []
all = ["pandas", "matplotlib", "hvplot", "shapely", "jupyterlab", "altair", "vega-datasets"]

[project.urls]
repository = "https://github.com/awesome-panel/awesome-panel-cli"

[tool.setuptools.dynamic]
version = {attr = "awesome_panel_cli.VERSION"}

[project.scripts]
pn = "awesome_panel_cli.cli.main:run"

[tool.black]
line-length = 100
extend-exclude = '''
/(
  | src/awesome_panel_cli/templates
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pylint.main]
ignore="templates"
py-version=3.9
output-format = "colorized"
max-attributes=12
max-args=10

[tool.pylint.format]
max-module-lines = 1000

[tool.mypy]
python_version = "3.9"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["src/awesome_panel_cli/templates"]

[[tool.mypy.overrides]]
module = [
    "altair.*",
    "bokeh.*",
    "cookiecutter.*",
    "holoviews.*",
    "hvplot.*",
    "pyparsing.*",
    "vega_datasets.*",
]
ignore_missing_imports = true

# https://github.com/pytest-dev/pytest/blob/main/pyproject.toml
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-s"
testpaths = ["tests"]
junit_family = "legacy"
python_files = ["tests.py","test_*.py"]
markers = [
    "unittest", # Small, isolated test
    "integrationtest", # A test towards some external system or service. For example a database
    "functionaltest", # Large potentially non-isolated test requiring access to external services
    "slow", # A slow test. Skip normally. But run this when you have the time.
    "skip_in_build_server", # Tests that should be skipped on the build server
]
filterwarnings=[
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning", 
    "ignore:inspect.getargspec.*:DeprecationWarning"
]

[tool.coverage.run]
omit=["src/awesome_panel_cli/templates/*"]

[html]
directory="test_results/cov_html"
skip_empty=true

[tool.bandit]
exclude_dirs = [".venv", "venv", "templates"]
severity="high"

[tool.bandit.assert_used]
exclude = ["*_test.py", "test_*.py"]